# SETI_NET

./: .gitignore  .install_dependances.sh.swp  CMakeLists.txt  Makefile  README.md  TODO.md  Untitled Document  backup.md  install_dependances.sh  lazy_setup.sh  legacy.txt  notes  seti-net  seti_net  seti_net.pro  startup.sh  toDo.txt
available_interfaces/: enp5s0.json
config/: build_types.cmake  code_coverage.cmake  compiler_flags.cmake  customization.cmake  docker0.json  lo.json  os_settings.cmake  profiling.cmake  static_analyzers.cmake  tun0.json  valgrind.supp  version.cmake  wlo1.json
config/os_settings/: linux.cmake  windows.cmake
include/core/: core.hpp
include/core/models/: data.hpp
include/core/utils/: utils.hpp
include/gui/MainWindow/: MainWindow.hpp
resources/: main.qrc  main.qrc.in
resources/styles/: dark_style.qss  default_style.qss
src/: CMakeCache.txt  a.out  main.cpp  pipe_communication.cpp  source.cpp
src/applyment/: applyment.cpp  applyment.h
src/core/: CMakeLists.txt  netinfo.cpp  netinfo.h
src/core/core_apply/: core_apply.cpp  core_apply.hpp  core_apply_apply_from_json.cpp  core_apply_netmask_to_prefix.cpp  core_apply_run_command.cpp  core_apply_verify_mac.cpp
src/core/core_logger/: core_logger.cpp  core_logger.hpp  core_logger_find_config.cpp  core_logger_json_processsing.cpp  core_logger_logwrite.cpp  core_logger_write_to_amdz.cpp
src/core/core_network/: core_network.cpp
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/gui/MainWindow/: MainWindow.cpp  MainWindow.hpp  MainWindow.ui  buttons.cpp
src/gui/SomeWidgetWithUiFile/: SomeWidgetWithUiFile.cpp  SomeWidgetWithUiFile.hpp  SomeWidgetWithUiFile.ui
src/gui/SomeWidgetWithoutUiFile/: SomeWidgetWithoutUiFile.cpp  SomeWidgetWithoutUiFile.hpp
src/logs/: logwriter.cpp  logwriter.h
src/tests/: CMakeLists.txt
src/tests/fuzz/: CMakeLists.txt  fuzz_core.cpp
src/tests/unit/: core_test.cpp  gui_test.cpp
